# RhiExamples

./: .gitignore  CMakeLists.txt  README.md  build.bat
Assets/Models/: sphere.fbx
Common/: AssetsManager.cpp  AssetsManager.h  CMakeLists.txt  Camera.cpp  Camera.h  Enum.h  Light.h  Log.cpp  Log.h  Transform.cpp  Transform.h  Win32Base.cpp  Win32Base.h
Examples/: AppBaseDx.cpp  AppBaseDx.h  AppBaseVk.cpp  AppBaseVk.h  CMakeLists.txt
Examples/ComputePipelineDx/: CMakeLists.txt  ComputePipelineDx.cpp  ComputePipelineDx.h  ComputePipelineDx_PipelineState.cpp  ComputePipelineDx_Resource.cpp  ComputePipelineDx_Tick.cpp  main.cpp
Examples/ConsoleTest/: CMakeLists.txt  main.cpp
Examples/GpuQueryDx/: CMakeLists.txt  GpuQueryDx.cpp  GpuQueryDx.h  GpuQueryDx_PipelineState.cpp  GpuQueryDx_Resource.cpp  GpuQueryDx_Tick.cpp  main.cpp
Examples/GpuQueryVk/: CMakeLists.txt
Examples/GraphicsPipelineDx/: CMakeLists.txt  GraphicsPipelineDx.cpp  GraphicsPipelineDx.h  GraphicsPipelineDx_PipelineState.cpp  GraphicsPipelineDx_Resource.cpp  GraphicsPipelineDx_Tick.cpp  main.cpp
Examples/GraphicsPipelineVk/: CMakeLists.txt  GraphicsPipelineVk.cpp  GraphicsPipelineVk.h  GraphicsPipelineVk_PipelineState.cpp  GraphicsPipelineVk_Resource.cpp  GraphicsPipelineVk_Tick.cpp  main.cpp
Examples/IndirectDrawDx/: CMakeLists.txt  IndirectDrawDx.cpp  IndirectDrawDx.h  IndirectDrawDx_PipelineState.cpp  IndirectDrawDx_Resource.cpp  IndirectDraw_PipelineState.cpp  IndirectDraw_Resource.cpp  IndirectDraw_Tick.cpp  main.cpp
Examples/IndirectDrawVk/: CMakeLists.txt  IndirectDrawVk.cpp  IndirectDrawVk.h  IndirectDrawVk_PipelineState.cpp  IndirectDrawVk_Resource.cpp  IndirectDrawVk_Tick.cpp  main.cpp
Examples/MeshPipelineDx/: CMakeLists.txt  MeshPipelineDx.cpp  MeshPipelineDx.h  MeshPipelineDx_PipelineState.cpp  MeshPipelineDx_Resource.cpp  MeshPipelineDx_Tick.cpp  main.cpp
Examples/MeshPipelineVk/: CMakeLists.txt  MeshPipelineVk.cpp  MeshPipelineVk.h  MeshPipelineVk_PipelineState.cpp  MeshPipelineVk_Resource.cpp  MeshPipelineVk_Tick.cpp  main.cpp
Examples/OcclusionQueryDx/: CMakeLists.txt  OcclusionQueryDx.cpp  OcclusionQueryDx.h  OcclusionQueryDx_PipelineState.cpp  OcclusionQueryDx_Resource.cpp  OcclusionQueryDx_Tick.cpp  main.cpp
Examples/OcclusionQueryVk/: CMakeLists.txt  main.cpp
Examples/PipelineStateCacheDx/: CMakeLists.txt
Examples/PipelineStateCacheVk/: CMakeLists.txt
Examples/RayTracingPipelineDx/: CMakeLists.txt  RayTracingPipelineDx.cpp  RayTracingPipelineDx.h  RayTracingPipelineDx_PipelineState.cpp  RayTracingPipelineDx_Resource.cpp  RayTracingPipelineDx_Tick.cpp  main.cpp
Examples/RayTracingPipelineVk/: CMakeLists.txt  RayTracingPipelineVk.cpp  RayTracingPipelineVk.h  RayTracingPipelineVk_PipelineState.cpp  RayTracingPipelineVk_Resource.cpp  RayTracingPipelineVk_Tick.cpp  main.cpp
Examples/ShaderReflectionDx/: CMakeLists.txt
Examples/ShaderReflectionVk/: CMakeLists.txt
Examples/VariableRateShadingDx/: CMakeLists.txt  VariableRateShadingDx.cpp  VariableRateShadingDx.h  VariableRateShadingDx_PipelineState.cpp  VariableRateShadingDx_Resource.cpp  VariableRateShadingDx_Tick.cpp  main.cpp
Shaders/: CMakeLists.txt  DepthOfField.cs.hlsl  Graphics.ps.hlsl  Graphics.vs.hlsl  IndirectDraw.ps.hlsl  IndirectDraw.vs.hlsl  MeshletViewer.ms.hlsl  MeshletViewer.ps.hlsl  RayTracing.rgen.hlsl  RayTracing.rhit.hlsl  RayTracing.rmis.hlsl  SolidColor.ps.hlsl  Unlit.ps.hlsl  Unlit.vs.hlsl  VisibleCulling.as.hlsl  VisibleCulling.cs.hlsl  VisibleCulling2.cs.hlsl
Shaders/Include/: CameraData.hlsli  Common.hlsli  LightData.hlsli  Meshlet.hlsli  RayTracingUtil.hlsli  TransformData.hlsli  Unlit.hlsli
Shaders/Passes/: GraphicsPipelinePass.hlsl  IndirectDrawPass.hlsl  MeshPipelinePass.hlsl  MeshletViewerPass.hlsl  RayTracingPass.hlsl  UnlitPass.hlsl
