add_subdirectory(ConsoleTest)
add_subdirectory(GraphicsPipelineDx)
# add_subdirectory(ComputePipelineDx)
# add_subdirectory(IndirectDrawDx)
# add_subdirectory(MeshPipelineDx)
# add_subdirectory(RayTracingPipelineDx)
# add_subdirectory(GpuQueryDx)
# add_subdirectory(VariableRateShadingDx)

if(vulkan_lib)
add_subdirectory(GraphicsPipelineVk)
endif()