add_subdirectory(ConsoleTest)
# add_subdirectory(GraphicsPipelineDx)
# add_subdirectory(IndirectDrawDx)
# add_subdirectory(GpuQueryDx)
add_subdirectory(MeshPipelineDx)
# add_subdirectory(RayTracingPipelineDx)
# add_subdirectory(VariableRateShadingDx)

if(vulkan_lib)
# add_subdirectory(GraphicsPipelineVk)
add_subdirectory(IndirectDrawVk)
# add_subdirectory(OcclusionQueryVk)
add_subdirectory(MeshPipelineVk)
endif()