# add_subdirectory(ConsoleTest)
add_subdirectory(GraphicsPipelineDx)
add_subdirectory(IndirectDrawDx)
add_subdirectory(OcclusionQueryDx)
add_subdirectory(MeshPipelineDx)
add_subdirectory(RayTracingPipelineDx)
add_subdirectory(VariableRateShadingDx)

if(vulkan_lib)
add_subdirectory(GraphicsPipelineVk)
add_subdirectory(IndirectDrawVk)
add_subdirectory(OcclusionQueryVk)
add_subdirectory(MeshPipelineVk)
add_subdirectory(RayTracingPipelineVk)
endif()